WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16902
fast/encoding/mailto-always-utf-8.html fails when run after fast/dom/Window/window-property-shadowing.html
https://bugs.webkit.org/show_bug.cgi?id=16902
Summary
fast/encoding/mailto-always-utf-8.html fails when run after fast/dom/Window/w...
mitz
Reported
2008-01-16 23:12:04 PST
run-webkit-tests fast/dom/Window/window-property-shadowing.html fast/encoding/mailto-always-utf-8.html produces the failure seen in <
http://build.webkit.org/results/trunk-win-release/7072/fast/encoding/mailto-always-utf-8-diffs.txt
>. (I think the failure is not seen on Mac build bots simply because the tests are not in the same 1000-batch on Mac).
Attachments
reduced test case
(170 bytes, text/html)
2008-01-17 00:26 PST
,
Alexey Proskuryakov
no flags
Details
proposed fix
(33.52 KB, patch)
2008-01-17 10:48 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2008-01-17 00:13:02 PST
This looks like a real bug, not just a DRT issue.
Alexey Proskuryakov
Comment 2
2008-01-17 00:26:22 PST
Created
attachment 18493
[details]
reduced test case
Alexey Proskuryakov
Comment 3
2008-01-17 01:25:20 PST
Same problem with window.devicePixelRatio, other properties seem to be correct.
Alexey Proskuryakov
Comment 4
2008-01-17 01:36:21 PST
Please ignore the previous comment - devicePixelRatio is OK, too, so it's only the name that isn't reset.
Adam Roben (:aroben)
Comment 5
2008-01-17 09:11:31 PST
<
rdar://problem/5692566
>
Alexey Proskuryakov
Comment 6
2008-01-17 09:12:15 PST
When running an extended test in DRT, I'm also getting an exception when trying to access window.showModalDialog in a test running after fast/dom/Window/window-property-shadowing.html. Somehow, this doesn't happen in Safari.
Adam Roben (:aroben)
Comment 7
2008-01-17 10:44:29 PST
Added to the Windows Skipped file in
r29584
.
Alexey Proskuryakov
Comment 8
2008-01-17 10:48:18 PST
Created
attachment 18504
[details]
proposed fix The showModalDialog exception is correct behavior - that's because DRT cannot run modal, and says so via its UIDelegate. There are many places in code where I could put the fix into, not sure if I picked the best (or even correct) one.
Darin Adler
Comment 9
2008-01-17 11:25:35 PST
Comment on
attachment 18504
[details]
proposed fix I think you could come up with some other way to name the new test differently. Adding an underscore seems pretty strange. r=me
Alexey Proskuryakov
Comment 10
2008-01-17 11:33:38 PST
(In reply to
comment #9
)
> I think you could come up with some other way to name the new test differently. > Adding an underscore seems pretty strange.
I have tried "-2" and "2", but both ran before the original test. I don't like the underscore, too, but couldn't find a better option.
Alexey Proskuryakov
Comment 11
2008-01-17 12:07:36 PST
Committed revision 29590.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug