        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=16902
        <rdar://problem/5692566> fast/encoding/mailto-always-utf-8.html fails when run after
        fast/dom/Window/window-property-shadowing.html

        Test: fast/dom/Window/window-property-shadowing_.html

        * loader/FrameLoader.cpp: (WebCore::FrameLoader::clear): Clear the frame name, too.



Canonical link: https://commits.webkit.org/23422@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29590 268f45cc-cd09-0410-ab3c-d52691b4dbfc